crates/murphy-plugin-macros/tests/ui/fail_cop_methods_on_non_send.stderr
error: #[on_node]: `methods = [...]` is only valid for `kind = "send"`; got kind "if"
  --> tests/ui/fail_cop_methods_on_non_send.rs:13:22
   |
13 |     #[on_node(kind = "if", methods = ["foo"])]
   |                      ^^^^

warning: unused import: `murphy_ast::NodeId`
 --> tests/ui/fail_cop_methods_on_non_send.rs:1:5
  |
1 | use murphy_ast::NodeId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_methods_on_non_send.rs:2:5
  |
2 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^
